<resources>
    <string name="app_name">My_Appl2</string>
    <string name="button">Button</string>
    <string name="hello_to_my_app">Login</string>
    <string name="item">Item</string>
    <string name="string_item">item</string>
    <string name="string_string_item">menu</string>
    <string name="string_string_string_item">string_string_string_item</string>
    <string name="menu" />
    <string name="open_pdf">open pdf</string>
    <string name="open_data">open_data</string>
    <string name="insert">insert</string>
    <string name="enter_your_age">enter your age</string>
    <string name="enter_your_nom">enter your nom</string>
    <string name="affiche">aff</string>
    <string name="forgect">FORGECT PASSWORD</string>
    <string name="modifier">Modifier</string>
    <string name="id">Id</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Connect">Connect</string>
    <string name="title_activity_table">table</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="todo">TODO</string>
    <string name="sing">LOGIN</string>
    <string name="Usaername">Usaername</string>


    <string name="client">client</string>
    <string name="fournisseur">fournisseur</string>
    <string name="article">article</string>
    <string name="devis">devis</string>
    <string name="facture">facture</string>
    <string name="bon_de_commande">bon de commande</string>
    <string name="go_gestion">go gestion</string>
    <string name="client1">CLIENT</string>
    <string name="textview">TextView</string>
    <string name="nom">Nom</string>
    <string name="enter_name">enter name</string>
    <string name="prenom">Prenom</string>
    <string name="name">Name</string>
    <string name="Telephone">Telephone</string>
    <string name="Gmail">Gmail</string>
    <string name="Adress">Adress</string>

    <string name="afficher_toutes">AFFICHE TOUTES</string>
    <string name="Modifier">MODIFIER</string>
    <string name="AJOUTER">AJOUTER</string>
    <string name="SUPPRIMER">SUPPRIMER</string>
    <string name="DATE_DE_CREATION">DATE DE CREATION</string>
    <string name="DATE_DEXPIRATION">DATE D`EXPIRATION</string>
    <string name="L_ARTICLE">L_ARTICLE</string>
    <string name="PERSONNE">PERSONNE CONCERNE</string>
    <string name="FOURNISSEUR_CONCERNE">FOURNISSEUR CONCERNE</string>
    <string name="Client_CONCERNE">CLIENT CONCERNE</string>
    <string name="ECHANCE_DE_PAIEMENT">ECHANCE DE PAIEMENT</string>
    <string name="ajouter_fournisseur">Ajouter Fournisseur</string>
    <string name="AJOUTER_DEVIS">AJOUTER DEVIS</string>
    <string name="ARTICLE">ARTICLE</string>
    <string name="list_bone_de_commande">List Bone De Commande</string>
    <string name="FOURNISSEUR">FOURNISSEUR</string>
    <string name="entre_prenom">enter prenom</string>
    <string name="phone">06........</string>
    <string name="nouveau">Nouveau</string>
    <string name="date_de_creation">DATE DE CREATION</string>
    <string name="gmaill">....@gmail.com</string>
    <string name="adresss">Quartier..,Ville</string>
    <string name="List_client">List client</string>
    <string name="date">../../....</string>
    <string name="list_fournisseur">list fournisseur</string>
    <string name="list_devis">List Devis</string>
    <string name="list_facture">list facture</string>
    <string name="calcule">Calcule</string>
    <string name="parameter">Parameter</string>
    <string name="exemplecalcule">..+..-..*../..</string>


</resources>