<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".facture">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".client">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="252dp"
                app:srcCompat="@drawable/clientformule" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="62dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:text="@string/DATE_DE_CREATION"
                    android:textSize="17sp"
                    android:layout_marginTop="-12dp"

                    />

                <EditText
                    android:id="@+id/nomfournisseur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/reccleinput"
                    android:drawableStart="@drawable/ic_baseline_calendar_month_24"
                    android:ems="10"
                    android:hint="@string/date_de_creation"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    android:paddingLeft="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dp"
                    android:layout_weight="1"
                    android:text="@string/FOURNISSEUR_CONCERNE"
                    android:textSize="16sp"


                    />

                <EditText
                    android:id="@+id/prenomfournisseur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/reccleinput"
                    android:drawableStart="@drawable/user2"
                    android:ems="10"
                    android:hint="@string/FOURNISSEUR"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    android:paddingLeft="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/texttelephone"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dp"
                    android:layout_weight="1"
                    android:text="@string/ECHANCE_DE_PAIEMENT"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/phonefournisseur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/reccleinput"
                    android:drawableStart="@drawable/paimente"
                    android:ems="10"
                    android:hint="@string/ECHANCE_DE_PAIEMENT"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:paddingStart="2dp"
                    android:textColorHint="#757575" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textgmail"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/L_ARTICLE"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/gmailfournisseur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/reccleinput"
                    android:drawableStart="@drawable/ic_baseline_article_24"
                    android:ems="10"
                    android:hint="@string/ARTICLE"
                    android:inputType="textLongMessage"
                    android:minHeight="48dp"
                    android:paddingStart="5dp"
                    android:textColorHint="#757575" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="189dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingTop="25dp"
                android:paddingBottom="30dp"

                >

                <Button
                    android:id="@+id/btnajouterbdc"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:layout_gravity="clip_horizontal"
                    android:layout_margin="5dp"
                    android:background="@android:drawable/stat_sys_download_done"

                    android:contentDescription="@string/button"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>