<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="118dp"
            android:layout_height="154dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/bin_de_connamde" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:text="@string/DATE_DE_CREATION"
                    android:textSize="15sp"

                    />

                <TextView
                    android:id="@+id/txtviewnomprenom"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"

                    android:textSize="20sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/DATE_DEXPIRATION" />

                <TextView
                    android:id="@+id/txtviewtelephone"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="1"


                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/client" />

                <TextView
                    android:id="@+id/txtviewgmail"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/article" />

                <TextView
                    android:id="@+id/txtviewadress"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>